# daughterboard

./: .clang-format  server.db
attiny84-spi-test/: Makefile  attiny_firmware.c  attiny_firmware.h  attiny_firmware.hex  main.c  main.elf  main.hex
board-firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old
board-firmware/main/: CMakeLists.txt  Kconfig.projbuild  MCP3461.c  MCP3461.h  app.c  app_wifi.c  avrisp.c  avrisp.h  command.h  crc32.h  device.c  device.h  io.h  management.c  management.h  measurements.c  measurements.h  network.c  node_config.c  node_config.h  test_adc.c  test_avr_isp.c  test_sequence.c  watchdog.c  watchdog.h  wifi.c  wifi.h
board-firmware/main/certs/: operator.crt  tower.crt  tower.pem
common/: comms.h  network-common.c  network.h  protocol.c  protocol.h
flashing-server/: .editorconfig  .gitignore  Dockerfile  Makefile  admin.legacy.p12  admin.p12  ca.p12  comms.h  create_tower_cert  kp.pem  localhost.p12  localhost_chain.pem  make_certificates.sh  operator.p12  protocol.h  root.crt  root.p12  sign_cert  sign_cert_operator  sign_cert_operator_small  sign_cert_root  sign_cert_teams  teams.p12  tower.p12
flashing-server/dicegrid.flashing/: module-info.java
flashing-server/dicegrid.flashing.server/main/: module-info.java
flashing-server/dicegrid.server/: module-info.java
flashing-server/dicegrid.server/foundation/oned6/dicegrid/: Main.java  TempDirectory.java  (+2 more)
flashing-server/dicegrid.server/scripts/: Util.java  createCA.java  createLeaf.java  createRoot.java
flashing-server/firmware/: CMakeLists.txt  sdkconfig  sdkconfig.old  test_bin.hex
flashing-server/firmware/main/: CMakeLists.txt  MCP3461.c  app.c  avrisp.c  avrisp.h  crc32.c  crc8.c  crc8.h  delay.h  device.c  device.h  network.c  network.h  node_config.c  node_config.h  test_avr_isp.c
flashing-server/pi4j-2.6.0/: README.md
relay-firmware/: .gitignore  CMakeLists.txt
relay-firmware/main/: CMakeLists.txt  app.c  echo.c  host_communications.c  host_communications.h  network.c
(+110 files in other folders)
